// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions addProductCardAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments 1`] = `
Array [
  Object {
    "resp": Array [
      Object {
        "content_type": "application/productCard",
        "extra": Object {
          "currency": "USD",
          "price": "1.00",
          "product_link": "https://storegorgias3.myshopify.com/products/bonbon-acidule?variant=31128766349335",
          "variant_name": "baz",
        },
        "name": "bar",
        "size": 0,
        "url": "https://cdn.shopify.com/s/files/1/1781/7573/products/candy.jpg?v=1575311784",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions addProductCardAttachments() should not dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments in another ticket 1`] = `Array []`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when adding more than 1 attachement in a facebook comment 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "tc",
      "status": "error",
      "style": "alert",
      "title": "We could not add all of your attachments !",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when failing to add attachment 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "error": Object {
      "response": Object {},
    },
    "reason": "Failed to upload files. Please try again later",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR when source is facebook comment and file has wrong type 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 9000,
      "dismissible": true,
      "id": "newMessageAddAttachmentsError",
      "message": "
                    Facebook comments have limitations on attachments:
                    <ul>
                        <li>You cannot send more than one attachment.</li>
                        <li>You can only send images or videos.</li>
                    </ul>
                ",
      "position": "tc",
      "status": "error",
      "style": "alert",
      "title": "We could not add all of your attachments !",
    },
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_ERROR with a reason  when error code is 413 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "error": Object {
      "response": Object {
        "status": 413,
      },
    },
    "reason": "Failed to upload files. One or more files are larger than the size limit of 10MB.",
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_ERROR",
  },
]
`;

exports[`actions new message addAttachments() should dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
  Object {
    "resp": Array [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message addAttachments() should not dispatch NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS when successfully adding attachments in another ticket 1`] = `
Array [
  Object {
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_START",
  },
]
`;

exports[`actions new message addEmailExtra() should dispatch NEW_MESSAGE_ADD_EMAIL_EXTRA action 1`] = `
Array [
  Object {
    "payload": Object {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
      "emailExtraArgs": Object {
        "isForwarded": true,
        "replyThreadMessages": Array [],
        "signature": Immutable.Map {
          "text": "Cheers, Steve",
          "html": "Cheers, <strong>Steve</strong>",
        },
        "ticket": Object {
          "assignee_user": Object {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "channel": "email",
          "closed_datetime": null,
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "customer": Object {
            "channels": Array [
              Object {
                "address": "jeanbon@gorgias.io",
                "created_datetime": "2017-07-31T21:45:03.399819+00:00",
                "deleted_datetime": null,
                "id": 55,
                "preferred": true,
                "type": "email",
                "updated_datetime": "2017-07-31T21:45:03.399828+00:00",
              },
              Object {
                "address": "+1 415-548-9999",
                "created_datetime": "2017-07-31T21:45:03.416965+00:00",
                "deleted_datetime": null,
                "id": 56,
                "preferred": true,
                "type": "phone",
                "updated_datetime": "2017-07-31T21:45:03.416976+00:00",
              },
            ],
            "data": null,
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "integrations": Object {
              "2": Object {
                "__integration_type__": "http",
                "args": Object {
                  "name": "Jean Bon",
                },
                "headers": Object {
                  "Accept": "*/*",
                  "Accept-Encoding": "gzip, deflate",
                  "Connection": "close",
                  "Content-Type": "application/json",
                  "Host": "httpbin.org",
                  "User-Agent": "python-requests/2.14.2",
                },
                "origin": "199.188.194.25",
                "url": "https://httpbin.org/get?name=Jean Bon",
              },
              "5": Object {
                "__integration_type__": "shopify",
                "customer": Object {
                  "accepts_marketing": false,
                  "addresses": Array [
                    Object {
                      "address1": "3 rue des volailles",
                      "address2": "",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "country_name": "France",
                      "customer_id": 4279837195,
                      "default": false,
                      "first_name": "Jean",
                      "id": 4665556619,
                      "last_name": "Bon",
                      "name": "Jean Bon",
                      "phone": "",
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                  ],
                  "created_at": "2017-03-17T21:26:16-04:00",
                  "default_address": Object {
                    "address1": "12 rue du poisson cru",
                    "address2": "unit 3",
                    "city": "Paris",
                    "company": "Fleury Michon",
                    "country": "France",
                    "country_code": "FR",
                    "country_name": "France",
                    "customer_id": 4279837195,
                    "default": true,
                    "first_name": "Jean",
                    "id": 4797217995,
                    "last_name": "Bon",
                    "name": "Jean Bon",
                    "phone": null,
                    "province": "Ile de France",
                    "province_code": null,
                    "zip": "75012",
                  },
                  "email": "jeanbon@gorgias.io",
                  "first_name": "Jean",
                  "id": 4279837195,
                  "last_name": "Bon",
                  "last_order_id": 4236385803,
                  "last_order_name": "#1202",
                  "multipass_identifier": null,
                  "note": "Un grand jambon",
                  "orders_count": 80,
                  "phone": "+14155489999",
                  "state": "disabled",
                  "tags": "Active Subscriber",
                  "tax_exempt": false,
                  "total_spent": "131.50",
                  "updated_at": "2017-07-12T20:44:14-04:00",
                  "verified_email": true,
                },
                "orders": Array [
                  Object {
                    "billing_address": Object {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jeanbon@gorgias.io",
                    "created_at": "2017-07-12T16:14:09-04:00",
                    "currency": "EUR",
                    "customer": Object {
                      "accepts_marketing": false,
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": Object {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": Array [],
                    "email": "jeanbon@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": Array [],
                    "gateway": "manual",
                    "id": 4236385803,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": Array [
                      Object {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "fulfillment_status": null,
                        "gift_card": false,
                        "grams": 200,
                        "id": 8276448779,
                        "name": "Baskets peu cheres  10.00% Off Auto renew",
                        "price": "9.00",
                        "product_exists": true,
                        "product_id": 9211387275,
                        "properties": Array [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "1234567890",
                        "tax_lines": Array [
                          Object {
                            "price": "1.50",
                            "rate": 0.2,
                            "title": "TVA",
                          },
                        ],
                        "taxable": true,
                        "title": "Baskets peu cheres  10.00% Off Auto renew",
                        "total_discount": "0.00",
                        "variant_id": 32994232907,
                        "variant_inventory_management": null,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1202",
                    "note": null,
                    "note_attributes": Array [],
                    "number": 202,
                    "order_number": 1202,
                    "order_status_url": null,
                    "payment_gateway_names": Array [
                      "manual",
                    ],
                    "phone": null,
                    "processed_at": "2017-07-12T16:14:09-04:00",
                    "processing_method": "manual",
                    "reference": null,
                    "referring_site": null,
                    "refunds": Array [],
                    "shipping_address": Object {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": Array [],
                    "source_identifier": null,
                    "source_name": "shopify_draft_order",
                    "source_url": null,
                    "subtotal_price": "9.00",
                    "tags": "",
                    "tax_lines": Array [
                      Object {
                        "price": "1.50",
                        "rate": 0.2,
                        "title": "TVA",
                      },
                    ],
                    "taxes_included": true,
                    "test": false,
                    "token": "c4e9a492adf51bed245af52b4dd1789a",
                    "total_discounts": "0.00",
                    "total_line_items_price": "9.00",
                    "total_price": "9.00",
                    "total_price_usd": "10.33",
                    "total_tax": "1.50",
                    "total_weight": 200,
                    "updated_at": "2017-07-12T16:14:10-04:00",
                    "user_id": 95205899,
                  },
                  Object {
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jean@gorgias.io",
                    "created_at": "2017-06-16T20:06:10-04:00",
                    "currency": "EUR",
                    "customer": Object {
                      "accepts_marketing": false,
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": Object {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": Array [],
                    "email": "jean@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": Array [],
                    "gateway": "",
                    "id": 4194477515,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": Array [
                      Object {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "fulfillment_status": null,
                        "gift_card": false,
                        "grams": 10,
                        "id": 8184387659,
                        "name": "Bonbon acidulé",
                        "price": "0.10",
                        "product_exists": true,
                        "product_id": 8345093387,
                        "properties": Array [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "0987654321",
                        "tax_lines": Array [],
                        "taxable": true,
                        "title": "Bonbon acidulé",
                        "total_discount": "0.00",
                        "variant_id": 28442938955,
                        "variant_inventory_management": null,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1199",
                    "note": null,
                    "note_attributes": Array [],
                    "number": 199,
                    "order_number": 1199,
                    "order_status_url": null,
                    "payment_gateway_names": Array [],
                    "phone": null,
                    "processed_at": "2017-06-16T20:06:10-04:00",
                    "processing_method": "",
                    "reference": null,
                    "referring_site": null,
                    "refunds": Array [],
                    "shipping_address": Object {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": Array [],
                    "source_identifier": null,
                    "source_name": "1424624",
                    "source_url": null,
                    "subtotal_price": "0.10",
                    "tags": "",
                    "tax_lines": Array [],
                    "taxes_included": false,
                    "test": false,
                    "token": "0fbe98fcc45da2abe985cc7eea5a5cf4",
                    "total_discounts": "0.00",
                    "total_line_items_price": "0.10",
                    "total_price": "0.10",
                    "total_price_usd": "0.11",
                    "total_tax": "0.00",
                    "total_weight": null,
                    "updated_at": "2017-06-16T20:06:10-04:00",
                    "user_id": null,
                  },
                ],
              },
            },
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "events": Array [],
          "external_id": null,
          "from_agent": true,
          "id": 152,
          "is_unread": true,
          "last_message_datetime": "2017-07-31T23:07:35.150000+00:00",
          "last_received_message_datetime": null,
          "messages": Array [
            Object {
              "actions": null,
              "attachments": Array [],
              "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "body_text": "Hi! How are you?",
              "channel": "email",
              "created_datetime": "2017-07-31T23:07:35.150000+00:00",
              "external_id": null,
              "failed_datetime": null,
              "from_agent": true,
              "id": 182,
              "integration_id": 1,
              "isMessage": true,
              "is_retriable": false,
              "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
              "meta": null,
              "opened_datetime": null,
              "public": true,
              "receiver": Object {
                "email": "jeanbon@gorgias.io",
                "firstname": "Jean",
                "id": 34,
                "lastname": "Bon",
                "name": "Jean Bon",
              },
              "rule_id": null,
              "sender": Object {
                "email": "alex@gorgias.io",
                "firstname": "Alex",
                "id": 2,
                "lastname": "Plugaru",
                "name": "Alex Plugaru",
              },
              "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
              "source": Object {
                "from": Object {
                  "address": "support@acme.gorgias.io",
                  "name": "Acme Support",
                },
                "to": Array [
                  Object {
                    "address": "jeanbon@gorgias.io",
                    "name": "Jean Bon",
                  },
                ],
                "type": "email",
              },
              "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "stripped_signature": null,
              "stripped_text": "Hi! How are you?",
              "subject": "",
              "ticket_id": 152,
              "uri": "/api/tickets/1/messages/0/",
              "via": "helpdesk",
            },
          ],
          "meta": null,
          "opened_datetime": null,
          "receiver": Object {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "sender": Object {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "snooze_datetime": null,
          "status": "open",
          "subject": "Great ticket",
          "tags": Array [
            Object {
              "decoration": null,
              "id": 1,
              "name": "refund",
              "uri": "/api/tags/1/",
              "user_id": 2,
            },
          ],
          "trashed_datetime": null,
          "updated_datetime": "2017-07-31T23:07:37.253131+00:00",
          "uri": "/api/tickets/0/",
          "via": "helpdesk",
        },
      },
    },
    "type": "NEW_MESSAGE_ADD_EMAIL_EXTRA",
  },
]
`;

exports[`actions new message newMessageResetFromMessage should send the message data to reset the state 1`] = `
Array [
  Object {
    "payload": Object {
      "body_text": "foo",
    },
    "type": "NEW_MESSAGE_RESET_FROM_MESSAGE",
  },
]
`;

exports[`actions new message prepare() email-forward should not set an attachment in the newMessage if it is already there 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [
      Object {
        "url": "bar",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should prepare an email forward 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() email-forward should set all attachments of the ticket as attachment of the newMessage 1`] = `
Array [
  Object {
    "subject": "Fwd: ",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "foo",
          },
          Immutable.Map {
            "url": "bar",
          },
        ],
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
        "attachments": Immutable.List [
          Immutable.Map {
            "url": "baz",
          },
          Immutable.Map {
            "url": "far",
          },
        ],
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {
      "forward": true,
    },
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "receivers": Object {},
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "resp": Array [
      Object {
        "url": "foo",
      },
      Object {
        "url": "bar",
      },
      Object {
        "url": "baz",
      },
      Object {
        "url": "far",
      },
    ],
    "type": "NEW_MESSAGE_ADD_ATTACHMENT_SUCCESS",
  },
]
`;

exports[`actions new message prepare() instagram comment should add prefix 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "@instauser ",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
      "selectionState": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 11,
        "focusKey": "someRandomKey",
        "focusOffset": 11,
        "isBackward": false,
        "hasFocus": false,
      },
      "dirty": true,
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": undefined,
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-media",
            "from": Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "a4sd684a6sd4a5sd",
                "name": "instagramuser",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
              "permalink": "https://instagram.com/foobar",
            },
          },
          "id": 153,
          "from_agent": true,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "type": "instagram-comment",
            "from": Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
            "to": Immutable.List [
              Immutable.Map {
                "address": "1232353100194770",
                "name": "myinstagrampage",
              },
            ],
            "extra": Immutable.Map {
              "media_id": "519388858269125_626477354226941",
            },
          },
          "id": 189,
          "from_agent": false,
        },
      ],
    },
    "ticketId": undefined,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is no receiver name 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() instagram comment should not add prefix if there is text already 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-media",
          "from": Immutable.Map {
            "address": "1232353100194770",
            "name": "myinstagrampage",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "a4sd684a6sd4a5sd",
              "name": "instagramuser",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
            "permalink": "https://instagram.com/foobar",
          },
        },
        "id": 153,
        "from_agent": true,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "type": "instagram-comment",
          "from": Immutable.Map {
            "address": "a4sd684a6sd4a5sd",
            "name": "instagramuser",
          },
          "to": Immutable.List [
            Immutable.Map {
              "address": "1232353100194770",
              "name": "myinstagrampage",
            },
          ],
          "extra": Immutable.Map {
            "media_id": "519388858269125_626477354226941",
          },
        },
        "id": 189,
        "from_agent": false,
      },
    ],
    "sourceType": "instagram-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "a4sd684a6sd4a5sd",
          "name": "instagramuser",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "myinstagrampage",
      "address": "1232353100194770",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "email",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 2`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "chat",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 3`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-comment",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepare() other types 4`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
  Object {
    "messages": Immutable.List [
      Immutable.Map {
        "source": Immutable.Map {
          "to": Immutable.List [
            Immutable.Map {
              "name": "Marc",
              "address": "marc.wall@gmail.com",
            },
            Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
          ],
          "from": Immutable.Map {
            "name": "Steve Frizeli",
            "address": "marie.curie@gmail.com",
          },
          "type": "email",
        },
        "id": 151,
        "from_agent": false,
      },
      Immutable.Map {
        "source": Immutable.Map {
          "cc": Immutable.List [],
          "to": Immutable.List [
            Immutable.Map {
              "name": "Steve Frizeli",
              "address": "steve.frizeli@gmail.com",
            },
          ],
          "from": Immutable.Map {
            "name": "Acme Support",
            "address": "support@acme.gorgias.io",
          },
          "type": "email",
        },
        "id": 152,
        "from_agent": true,
      },
    ],
    "sourceType": "facebook-message",
    "type": "NEW_MESSAGE_SET_SOURCE_TYPE",
  },
  Object {
    "extra": Object {},
    "type": "NEW_MESSAGE_SET_SOURCE_EXTRA",
  },
  Object {
    "receivers": Object {
      "to": Array [
        Object {
          "address": "steve.frizeli@gmail.com",
          "name": "Steve Frizeli",
        },
      ],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 1`] = `
Array [
  Array [
    Immutable.Record {
      "entityMap": Object {
        "__add": [Function],
        "__create": [Function],
        "__get": [Function],
        "__getLastCreatedEntityKey": [Function],
        "__mergeData": [Function],
        "__replaceData": [Function],
        "add": [Function],
        "create": [Function],
        "get": [Function],
        "getLastCreatedEntityKey": [Function],
        "mergeData": [Function],
        "replaceData": [Function],
      },
      "blockMap": Immutable.OrderedMap {
        "someRandomKey": Immutable.Record {
          "key": "someRandomKey",
          "type": "unstyled",
          "text": "Hi ",
          "characterList": Immutable.List [
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
            Immutable.Record {
              "style": Immutable.OrderedSet [],
              "entity": null,
            },
          ],
          "depth": 0,
          "data": Immutable.Map {},
        },
      },
      "selectionBefore": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
      "selectionAfter": Immutable.Record {
        "anchorKey": "someRandomKey",
        "anchorOffset": 0,
        "focusKey": "someRandomKey",
        "focusOffset": 0,
        "isBackward": false,
        "hasFocus": false,
      },
    },
    Object {
      "isForwarded": false,
      "replyThreadMessages": Array [
        Object {
          "actions": null,
          "attachments": Array [],
          "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
          "body_text": "Hi! How are you?",
          "channel": "email",
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "external_id": null,
          "failed_datetime": null,
          "from_agent": true,
          "id": 182,
          "integration_id": 1,
          "isMessage": true,
          "is_retriable": false,
          "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
          "meta": null,
          "opened_datetime": null,
          "public": true,
          "receiver": Object {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "rule_id": null,
          "sender": Object {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
          "source": Object {
            "from": Object {
              "address": "support@acme.gorgias.io",
              "name": "Acme Support",
            },
            "to": Array [
              Object {
                "address": "jeanbon@gorgias.io",
                "name": "Jean Bon",
              },
            ],
            "type": "email",
          },
          "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
          "stripped_signature": null,
          "stripped_text": "Hi! How are you?",
          "subject": "",
          "ticket_id": 152,
          "uri": "/api/tickets/1/messages/0/",
          "via": "helpdesk",
        },
      ],
      "signature": Immutable.Map {
        "text": "cheers, Steve",
        "html": "cheers, <strong>Steve</strong>",
      },
      "ticket": Object {
        "channel": "",
        "messages": Array [
          Object {
            "actions": null,
            "attachments": Array [],
            "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
            "body_text": "Hi! How are you?",
            "channel": "email",
            "created_datetime": "2017-07-31T23:07:35.150000+00:00",
            "external_id": null,
            "failed_datetime": null,
            "from_agent": true,
            "id": 182,
            "integration_id": 1,
            "isMessage": true,
            "is_retriable": false,
            "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
            "meta": null,
            "opened_datetime": null,
            "public": true,
            "receiver": Object {
              "email": "jeanbon@gorgias.io",
              "firstname": "Jean",
              "id": 34,
              "lastname": "Bon",
              "name": "Jean Bon",
            },
            "rule_id": null,
            "sender": Object {
              "email": "alex@gorgias.io",
              "firstname": "Alex",
              "id": 2,
              "lastname": "Plugaru",
              "name": "Alex Plugaru",
            },
            "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
            "source": Object {
              "from": Object {
                "address": "support@acme.gorgias.io",
                "name": "Acme Support",
              },
              "to": Array [
                Object {
                  "address": "jeanbon@gorgias.io",
                  "name": "Jean Bon",
                },
              ],
              "type": "email",
            },
            "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
            "stripped_signature": null,
            "stripped_text": "Hi! How are you?",
            "subject": "",
            "ticket_id": 152,
            "uri": "/api/tickets/1/messages/0/",
            "via": "helpdesk",
          },
        ],
        "status": "open",
        "subject": "Foo subject",
      },
    },
  ],
]
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 2`] = `
Object {
  "actions": Immutable.List [],
  "body_html": "<div>Extra <strong>content</strong></div>",
  "body_text": "Extra content",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": Object {
    "from": Object {
      "address": "support@acme.gorgias.io",
    },
    "type": "email",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should add email extra to the message when source type is email 3`] = `
Object {
  "contentState": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "text": "Extra content",
      "type": "unstyled",
    },
  ],
  "emailExtraAdded": true,
}
`;

exports[`actions new message prepareTicketDataToSend() should not add email extra to the message when source type is not email 1`] = `
Object {
  "actions": Immutable.List [],
  "body_html": "original html",
  "body_text": "original text",
  "sender": Immutable.Map {
    "id": 1,
    "name": "Steve",
  },
  "source": Object {
    "type": "facebook-message",
  },
}
`;

exports[`actions new message prepareTicketDataToSend() should not add email extra to the message when source type is not email 2`] = `
Object {
  "contentState": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "text": "Hi ",
      "type": "unstyled",
    },
  ],
}
`;

exports[`actions new message prepareTicketMessage should prepare next new message after we submitted an instagram comment 1`] = `
Object {
  "attachments": Array [],
  "body_html": "",
  "body_text": "",
  "channel": "email",
  "from_agent": true,
  "macros": Array [],
  "mention_ids": Array [],
  "public": true,
  "sender": Immutable.Map {
    "id": 1,
    "name": "foo",
  },
  "source": Object {
    "extra": Object {
      "media_id": "519388858269125_626477354226941",
    },
    "to": Array [
      Object {
        "name": "messagereceiver",
      },
    ],
    "type": "instagram-comment",
  },
  "subject": "",
  "via": "helpdesk",
}
`;

exports[`actions new message prepareTicketMessage should prepare next new message after we submitted an instagram comment 2`] = `
Object {
  "appliedMacro": null,
  "cacheAdded": false,
  "contentState": Array [
    Object {
      "data": Object {},
      "depth": 0,
      "text": "",
      "type": "unstyled",
    },
  ],
  "dirty": false,
  "emailExtraAdded": false,
  "firstNewMessage": true,
  "forceFocus": false,
  "forceUpdate": false,
}
`;

exports[`actions new message sendTicketMessage should submit new message 1`] = `
Array [
  Object {
    "message": Object {
      "attachments": Array [],
      "body_html": "<div><br></div>",
      "body_text": "",
      "channel": "email",
      "from_agent": true,
      "macros": Array [],
      "mention_ids": Array [],
      "public": true,
      "sender": Immutable.Map {
        "id": 1,
        "name": "foo",
      },
      "source": Object {
        "bcc": Array [],
        "cc": Array [],
        "extra": Object {
          "include_thread": false,
        },
        "from": Object {},
        "to": Array [],
        "type": "email",
      },
      "subject": "",
      "via": "helpdesk",
    },
    "messageId": "nowTimestamp",
    "messages": Immutable.List [],
    "resetMessage": true,
    "retry": false,
    "status": undefined,
    "ticketId": 12,
    "ticketVia": "helpdesk",
    "type": "NEW_MESSAGE_SUBMIT_TICKET_MESSAGE_START",
  },
  Object {
    "macro": undefined,
    "type": "APPLY_MACRO",
  },
  Object {
    "appliedMacro": null,
    "args": Immutable.Map {
      "forceFocus": true,
      "forceUpdate": true,
    },
    "currentUser": Immutable.Map {
      "id": 1,
      "name": "foo",
    },
    "forceFocus": true,
    "forceUpdate": true,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "trashed_datetime": null,
      "channel": "email",
      "is_unread": false,
      "priority": "normal",
      "reply_options": Immutable.Map {
        "email": Immutable.Map {
          "answerable": true,
        },
        "internal-note": Immutable.Map {
          "answerable": true,
        },
      },
      "spam": false,
      "subject": "",
      "messages": Immutable.List [],
      "assignee_team": null,
      "via": "helpdesk",
      "state": Immutable.Map {
        "dirty": false,
        "latestEventDatetime": null,
        "appliedMacro": null,
      },
      "status": "open",
      "tags": Immutable.List [],
      "events": Immutable.List [],
      "assignee_user": null,
      "id": 12,
      "_internal": Immutable.Map {
        "displayHistory": false,
        "shouldDisplayAuditLogEvents": false,
        "shouldDisplayHistoryOnNextPage": false,
        "loading": Immutable.Map {
          "fetchTicket": false,
          "deleteMessage": false,
          "setSpam": false,
          "setTrash": false,
        },
        "pendingMessages": Immutable.List [],
      },
      "customer": null,
    },
    "ticketId": 12,
    "type": "setResponseText",
  },
  Object {
    "receivers": Object {
      "to": Array [],
    },
    "replaceAll": true,
    "type": "NEW_MESSAGE_SET_RECEIVERS",
  },
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setResponseText() should always pass the args to the reducer 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "messages": Immutable.List [
        Immutable.Map {
          "source": Immutable.Map {
            "to": Immutable.List [
              Immutable.Map {
                "name": "Marc",
                "address": "marc.wall@gmail.com",
              },
              Immutable.Map {
                "name": "Acme Support",
                "address": "support@acme.gorgias.io",
              },
            ],
            "from": Immutable.Map {
              "name": "Steve Frizeli",
              "address": "marie.curie@gmail.com",
            },
            "type": "email",
          },
          "id": 151,
          "from_agent": false,
        },
        Immutable.Map {
          "source": Immutable.Map {
            "cc": Immutable.List [],
            "to": Immutable.List [
              Immutable.Map {
                "name": "Steve Frizeli",
                "address": "steve.frizeli@gmail.com",
              },
            ],
            "from": Immutable.Map {
              "name": "Acme Support",
              "address": "support@acme.gorgias.io",
            },
            "type": "email",
          },
          "id": 152,
          "from_agent": true,
        },
      ],
    },
    "ticketId": undefined,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send a typing event when the reply area only contains a signature 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "signature",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send a typing event when the user is typing in an internal note 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should not send an end typing event when the user is not typing and not in ticket 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "",
            "characterList": Immutable.List [],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should send an end typing event on ticket when the user is not typing but is in the room 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "",
            "characterList": Immutable.List [],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": Immutable.Map {
      "id": 1,
    },
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setResponseText() should send typing event when the user is typing 1`] = `
Array [
  Object {
    "appliedMacro": undefined,
    "args": Immutable.Map {
      "contentState": Immutable.Record {
        "entityMap": Object {
          "__add": [Function],
          "__create": [Function],
          "__get": [Function],
          "__getLastCreatedEntityKey": [Function],
          "__mergeData": [Function],
          "__replaceData": [Function],
          "add": [Function],
          "create": [Function],
          "get": [Function],
          "getLastCreatedEntityKey": [Function],
          "mergeData": [Function],
          "replaceData": [Function],
        },
        "blockMap": Immutable.OrderedMap {
          "someRandomKey": Immutable.Record {
            "key": "someRandomKey",
            "type": "unstyled",
            "text": "foo",
            "characterList": Immutable.List [
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
              Immutable.Record {
                "style": Immutable.OrderedSet [],
                "entity": null,
              },
            ],
            "depth": 0,
            "data": Immutable.Map {},
          },
        },
        "selectionBefore": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
        "selectionAfter": Immutable.Record {
          "anchorKey": "someRandomKey",
          "anchorOffset": 0,
          "focusKey": "someRandomKey",
          "focusOffset": 0,
          "isBackward": false,
          "hasFocus": false,
        },
      },
    },
    "currentUser": undefined,
    "forceFocus": false,
    "forceUpdate": false,
    "fromMacro": false,
    "signature": Immutable.Map {},
    "ticket": Immutable.Map {
      "id": 1,
    },
    "ticketId": 1,
    "type": "setResponseText",
  },
]
`;

exports[`actions new message setSender action should handle phone channel 1`] = `
Array [
  Object {
    "sender": Immutable.Map {
      "name": "Acme Phone",
      "address": "+14151112222",
      "id": 6,
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setSender action with address 1`] = `
Array [
  Object {
    "sender": Immutable.Map {
      "name": "Acme Support",
      "address": "support@acme.gorgias.io",
    },
    "type": "NEW_MESSAGE_SET_SENDER",
  },
]
`;

exports[`actions new message setSubject() default value 1`] = `
Array [
  Object {
    "subject": "",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions new message setSubject() given value 1`] = `
Array [
  Object {
    "subject": "hello world",
    "type": "NEW_MESSAGE_SET_SUBJECT",
  },
]
`;

exports[`actions updatePotentialCustomers should resolve when cancelled 1`] = `undefined`;

exports[`actions updatePotentialCustomers should return a list of potential customer on success 1`] = `
Array [
  Object {
    "address": "marie@gorgias.io",
    "customer": Object {
      "id": 4,
      "name": "Marie Curie",
    },
    "id": 4,
    "name": "Marie Curie",
    "type": "email",
    "user": Object {
      "id": 4,
      "name": "Marie Curie",
    },
  },
]
`;
